@@ -1,3 +1,11 @@
+2006-05-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/Makefile.am
+    Update check-asm rule to check src_linear.c and src_zoh.c.
+
+    * src/src_linear.c
+    Remove all uses of floor() function.
+
 2006-04-18  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/samplerate.[ch] src/Version_script.in
